# O-X

./: .gitignore  CMakeLists.txt  README.md  main.cpp
res/: Field.qml  main.qml  qml.qrc
src/: GameController.cpp  GameController.h
src/core/: Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameState.cpp  GameState.h  Player.cpp  Player.h
test/gtest/: GameBoardTest.cpp  GameTest.cpp
